Added an index.html

--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="homepage.html">My Desk</a>
+                <a href="index.html">My Desk</a>
             </div>
             <ul class="nav-links">
-                <li><a href="homepage.html">Workspace</a></li>
+                <li><a href="index.html">Workspace</a></li>
                 <li><a href="tasks.html">To-Do List</a></li>
                 <li><a href="notes.html">My Notes</a></li>
                 <li><a href="about.html">About</a></li>
@@ -37,7 +37,7 @@
                 Whether you have a suggestion, found a bug, or just want to say hello, we'd love to hear from you. Your feedback is what helps us make My Desk better for everyone. Please fill out the form, and we'll get back to you as soon as possible.
             </p>
 
-            <form action="#" method="POST" class="contact-form">
+            <form action="https://formspree.io/f/mkgvlgdb" method="POST" class="contact-form">
                 <div class="form-group">
                     <label for="name">Your Name</label>
                     <input type="text" id="name" name="name" required class="form-control" placeholder="Your Name">
