--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="homepage.html">My Desk</a>
+                <a href="index.html">My Desk</a>
             </div>
             <ul class="nav-links">
-                <li><a href="homepage.html">Workspace</a></li>
+                <li><a href="index.html">Workspace</a></li>
                 <li><a href="tasks.html">To-Do List</a></li>
                 <li><a href="notes.html">My Notes</a></li>
                 <li><a href="about.html">About</a></li>
